@@ -3,13 +3,21 @@ TOPDIR=..
 endif
 include $(TOPDIR)/Makefile.global
 
-check: test-normal
+check: test-normal test-fltcmp
 
 test-normal:
 	@echo "Submitting normal test sources..." ; \
 	for i in test-* ; do \
 		echo "Submitting '$$i'" ; \
 		$(TOPDIR)/submit/submit -q -p hello "$$i" ; \
+		sleep 1 ; \
+	done
+
+test-fltcmp: test-fltcmp.c
+	@echo "Submitting fltcmp test sources..." ; \
+		for i in $^ ; do \
+		echo "Submitting '$$i'" ; \
+		$(TOPDIR)/submit/submit -q -p fltcmp "$$i" ; \
 		sleep 1 ; \
 	done
 
@@ -21,4 +29,4 @@ test-stress:
 		sleep 1 ; \
 	done
 
-.PHONY: test-normal test-stress
+.PHONY: test-normal test-fltcmp test-stress
