@@ -18,6 +18,8 @@ Version 2.1.0 - SVN
  - Make warning and error beeps default to something more noticeable.
  - Let show_source cope with empty file submissions gracefully.
  - Abort startup of judgedaemon if processes of RUNUSER still found running.
+ - Added extra default problem 'fltcmp' for testing check_float and special
+   run script code.
 
 Version 2.0.0 - SVN
 -------------------
